# mcrizzledizzle

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE.md  README.md  justfile  wrld.hexpat
.cargo/: config.toml  runner.sh
.github/workflows/: build.yml  release.yml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/extensions/: README.md
book/src/extensions/functions/: README.md  logging.md
book/src/extensions/types/: Context.md  Event.md  Metadata.md  Player.md  PlayersWrapper.md  README.md  Vec3.md  Version.md  WorldWrapper.md
book/src/guide/: configuration.md  extensions.md
rte/: config.toml
rte/extensions/: fill.rhai
src/: command.rs  config.rs  error.rs  extensions.rs  main.rs  network.rs  player.rs  utils.rs  world.rs  world.wrld
src/extensions/: fill.rhai  jimmy.rhai  ping-pong.rhai  utils.rhai
