[package]
name = "mcrizzledizzle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcrizzledizzle"
path = "src/main.rs"

[dependencies]
ctrlc = "3.4.5"
flate2 = "1.0.30"
log = "0.4.26"
regex = "1.11.1"
rhai-rand = "0.1.6"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
simple_logger = { version = "5.0.0", features = ["threads", "nightly"] }
rhai = { version = "1.21.0", features = ["sync"] }
